fixed animated map title per email

--- a/generate_vis.ipynb
+++ b/generate_vis.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,15 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "output/embeds/num_appeals\n"
+     ]
+    }
+   ],
    "source": [
     "save_plot(num_appeals, \"output/num_appeals\")"
    ]
@@ -118,7 +126,15 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "output/embeds/pct_appeals_of_fulton\n"
+     ]
+    }
+   ],
    "source": [
     "save_plot(pct_fulton_appeals, \"output/pct_appeals_of_fulton\")"
    ]
@@ -148,7 +164,15 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "output/embeds/normalized_appeals\n"
+     ]
+    }
+   ],
    "source": [
     "save_plot(normalized_city, \"output/normalized_appeals\")"
    ]
@@ -177,7 +201,15 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "output/embeds/geq_1_appeals\n"
+     ]
+    }
+   ],
    "source": [
     "save_plot(geq_1_city, \"output/geq_1_appeals\")"
    ]
@@ -199,7 +231,15 @@
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "output/embeds/geq_6_appeals\n"
+     ]
+    }
+   ],
    "source": [
     "save_plot(geq_6_city, \"output/geq_6_appeals\")"
    ]
@@ -221,7 +261,15 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "output/embeds/geq_9_appeals\n"
+     ]
+    }
+   ],
    "source": [
     "save_plot(geq_1_city, \"output/geq_9_appeals\")"
    ]
@@ -272,7 +320,7 @@
     "\n",
     "f.update_layout(\n",
     "    title=dict(\n",
-    "        text=\"Percent of Parcels Filing More Than 1 Appeal Between 2011-2022\",\n",
+    "        text=\"Percent of Parcels Filing at Least 1 Appeal Between 2011-2022\",\n",
     "        font=dict(size=20),\n",
     "        automargin=True,\n",
     "        yref=\"paper\",\n",
@@ -288,14 +336,22 @@
     ")\n",
     "\n",
     "for k in range(0, len(f.frames)):\n",
-    "    f.frames[k]['layout'].update(title_text=f\"Percent of Parcels Filing More Than {k+1} Appeals Between 2011-2022\")"
+    "    f.frames[k]['layout'].update(title_text=f\"Percent of Parcels Filing at Least {k+1} Appeal(s) Between 2011-2022\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "output/embeds/animated_n_appeals\n"
+     ]
+    }
+   ],
    "source": [
     "save_plot(f, \"output/animated_n_appeals\")"
    ]
@@ -352,7 +408,15 @@
    "cell_type": "code",
    "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "output/embeds/num_successful_appeals\n"
+     ]
+    }
+   ],
    "source": [
     "save_plot(success_city, \"output/num_successful_appeals\")"
    ]
@@ -382,7 +446,15 @@
    "cell_type": "code",
    "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "output/embeds/pct_successful_appeals\n"
+     ]
+    }
+   ],
    "source": [
     "save_plot(pct_success_city, \"output/pct_successful_appeals\")"
    ]
@@ -450,7 +522,15 @@
    "cell_type": "code",
    "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "output/embeds/sum_appealed\n"
+     ]
+    }
+   ],
    "source": [
     "save_plot(sum_appealed, \"output/sum_appealed\")"
    ]
