update map to work with quarto and smaller embed

--- a/generate_vis.ipynb
+++ b/generate_vis.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Generate Vis for Fulton County Appeal Filings"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -12,6 +19,9 @@
     "import geopandas as gpd\n",
     "import plotly.express as px\n",
     "import pandas as pd\n",
+    "\n",
+    "import plotly.io as pio\n",
+    "pio.renderers.default = \"plotly_mimetype+notebook_connected\"\n",
     "\n",
     "import map_utils"
    ]
@@ -38,12 +48,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "def save_plot(fig, filename):\n",
-    "    fig.write_html(filename + '.html')\n",
+    "    fig.write_html(filename + '.html', full_html=False)\n",
     "    # kaleido==0.1.0.post1\n",
     "    # fig.write_image(filename + '.png')\n",
     "    # saving png is not working"
@@ -51,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,27 +84,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#| label: num_appeals\n",
     "log = 10\n",
-    "color = 'count_appeals_city'\n",
-    "hover_data = {'count_appeals_city': (\":,\", \"Count\")}\n",
-    "title = 'Number of Appeals Filed by Parcels in Each City of Fulton County Between 2011 and 2022'\n",
+    "color = \"count_appeals_city\"\n",
+    "hover_data = {\"count_appeals_city\": (\":,\", \"Count\")}\n",
+    "title = \"# Appeals Filed in Each City of Fulton County 2011-2022\"\n",
     "\n",
-    "num_appeals = map_utils.gen_choropleth_log(log, df, geo, loc, featureid, color, hover_data, title, ',')"
+    "num_appeals = map_utils.gen_choropleth_log(\n",
+    "    log, df, geo, loc, featureid, color, hover_data, title, \",\"\n",
+    ")\n",
+    "#num_appeals.show()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "output/embeds/num_appeals\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "save_plot(num_appeals, \"output/num_appeals\")"
    ]
@@ -112,29 +118,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#| label: pct_fulton_appeals\n",
     "log = 10\n",
-    "color = 'pct_appeals_in_city'\n",
-    "hover_data = {'pct_appeals_in_city': (\":.2\", \"Percent\")}\n",
-    "title = 'Appeals Filed by Parcels in Each City as a Percent of Total Appeals Filed in Fulton County Between 2011 and 2022'\n",
-    "postfix = '%'\n",
-    "#scale = 'ylorrd'\n",
-    "pct_fulton_appeals = map_utils.gen_choropleth_log(log, df, geo, loc, featureid, color, hover_data, title, postfix=postfix)\n",
-    "# pct_fulton_appeals.show()"
+    "color = \"pct_appeals_in_city\"\n",
+    "hover_data = {\"pct_appeals_in_city\": (\":.2\", \"Percent\")}\n",
+    "title = \"Appeals Filed in Each City as % of Appeals Filed in Fulton County 2011-2022\"\n",
+    "postfix = \"%\"\n",
+    "# scale = 'ylorrd'\n",
+    "pct_fulton_appeals = map_utils.gen_choropleth_log(\n",
+    "    log, df, geo, loc, featureid, color, hover_data, title, postfix=postfix\n",
+    ")\n",
+    "#pct_fulton_appeals.show()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "output/embeds/pct_appeals_of_fulton\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "save_plot(pct_fulton_appeals, \"output/pct_appeals_of_fulton\")"
    ]
@@ -152,27 +153,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "color = 'pct_appeals_over_pct_parcels'\n",
-    "hover_data = {'pct_appeals_over_pct_parcels': (\":.2\", \"Ratio\")}\n",
-    "title = \"Normalized Ratio of Total Appeals Filed in Fulton County Between 2011 and 2022\"\n",
+    "#| label: pct_appeals_over_per_parcels\n",
+    "color = \"pct_appeals_over_pct_parcels\"\n",
+    "hover_data = {\"pct_appeals_over_pct_parcels\": (\":.2\", \"Ratio\")}\n",
+    "title = \"% Appeals / % Parcels Filed in Each City of Fulton County Between 2011-2022\"\n",
     "colorbar_scale = dict(cmid=1)\n",
     "\n",
-    "normalized_city = map_utils.gen_choropleth(df, geo, loc, featureid, color, hover_data, title, str_format=',', scale='temps', colorbar_scale=colorbar_scale)"
+    "normalized_city = map_utils.gen_choropleth(\n",
+    "    df,\n",
+    "    geo,\n",
+    "    loc,\n",
+    "    featureid,\n",
+    "    color,\n",
+    "    hover_data,\n",
+    "    title,\n",
+    "    str_format=\",\",\n",
+    "    scale=\"temps\",\n",
+    "    colorbar_scale=colorbar_scale,\n",
+    ")\n",
+    "#normalized_city.show()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "output/embeds/normalized_appeals\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "save_plot(normalized_city, \"output/normalized_appeals\")"
    ]
@@ -201,15 +207,7 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "output/embeds/geq_1_appeals\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "save_plot(geq_1_city, \"output/geq_1_appeals\")"
    ]
@@ -231,15 +229,7 @@
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "output/embeds/geq_6_appeals\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "save_plot(geq_6_city, \"output/geq_6_appeals\")"
    ]
@@ -261,15 +251,7 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "output/embeds/geq_9_appeals\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "save_plot(geq_1_city, \"output/geq_9_appeals\")"
    ]
@@ -303,24 +285,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#| label: animated_n_appeals\n",
     "f = px.choropleth(\n",
     "    geq_n_appeals,\n",
     "    geojson=geo,\n",
-    "    locations='city',\n",
+    "    locations=\"city\",\n",
     "    featureidkey=featureid,\n",
-    "    color='appeals',\n",
-    "    animation_frame='geq_n_appeals',\n",
-    "    animation_group='city',\n",
-    "    color_continuous_scale='ylorrd',\n",
-    "    hover_name='city',\n",
-    "    hover_data={'city': False, 'geq_n_appeals': False, 'appeals': \":.2f\"},\n",
-    "    labels={'appeals': 'Percent Filing Given Number of Appeals'},\n",
+    "    color=\"appeals\",\n",
+    "    animation_frame=\"geq_n_appeals\",\n",
+    "    animation_group=\"city\",\n",
+    "    color_continuous_scale=\"ylorrd\",\n",
+    "    hover_name=\"city\",\n",
+    "    hover_data={\"city\": False, \"geq_n_appeals\": False, \"appeals\": \":.2f\"},\n",
+    "    labels={\"appeals\": \"Percent Filing Given Number of Appeals\"},\n",
     ")\n",
     "f.update_geos(fitbounds=\"locations\", visible=False)\n",
     "\n",
     "f.update_layout(\n",
     "    title=dict(\n",
-    "        text=\"Percent of Parcels Filing at Least 1 Appeal Between 2011-2022\",\n",
+    "        text=\"Percent of Parcels Filing at Least 1 Appeal(s) Between 2011-2022\",\n",
     "        font=dict(size=20),\n",
     "        automargin=True,\n",
     "        yref=\"paper\",\n",
@@ -332,26 +315,21 @@
     "    margin={\"r\": 0, \"t\": 35, \"l\": 0, \"b\": 0},\n",
     "    width=1200,\n",
     "    height=630,\n",
-    "    sliders=[{\"currentvalue\": {\"prefix\": \"Number of Appeals: \"}}]\n",
+    "    sliders=[{\"currentvalue\": {\"prefix\": \"Number of Appeals: \"}}],\n",
     ")\n",
     "\n",
     "for k in range(0, len(f.frames)):\n",
-    "    f.frames[k]['layout'].update(title_text=f\"Percent of Parcels Filing at Least {k+1} Appeal(s) Between 2011-2022\")"
+    "    f.frames[k][\"layout\"].update(\n",
+    "        title_text=f\"Percent of Parcels Filing at Least {k+1} Appeal(s) Between 2011-2022\"\n",
+    "    )\n",
+    "#f.show()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "output/embeds/animated_n_appeals\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "save_plot(f, \"output/animated_n_appeals\")"
    ]
@@ -396,27 +374,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#| label: success_city\n",
     "log = 20\n",
     "color = 'success_count_city'\n",
     "hover_data = {'success_count_city': (\":,\", \"Successful Appeals\")}\n",
-    "title = \"Number of Successful Appeals in Each City Between 2011-2022\"\n",
+    "title = \"Number of Successful Appeals in Each City of Fulton County Between 2011-2022\"\n",
     "\n",
-    "success_city = map_utils.gen_choropleth_log(log, df, geo, loc, featureid, color, hover_data, title, ',')"
+    "success_city = map_utils.gen_choropleth_log(log, df, geo, loc, featureid, color, hover_data, title, ',')\n",
+    "#success_city.show()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 22,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "output/embeds/num_successful_appeals\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "save_plot(success_city, \"output/num_successful_appeals\")"
    ]
@@ -425,7 +397,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Generate map showing prcent of successful appeals each city"
+    "## Generate map showing percent of successful appeals each city"
    ]
   },
   {
@@ -434,27 +406,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#| label: percent_success\n",
     "log = 2\n",
     "color = 'success_rate_city'\n",
     "hover_data = {'success_rate_city': (\":.1f\", \"Successful Appeals\")}\n",
-    "title = \"Success Rate of Appeals in Each City Between 2011-2022\"\n",
+    "title = \"Success Rate of Appeals in Each City of Fulton County Between 2011-2022\"\n",
     "\n",
-    "pct_success_city = map_utils.gen_choropleth_log(log, df, geo, loc, featureid, color, hover_data, title, ',')"
+    "pct_success_city = map_utils.gen_choropleth_log(log, df, geo, loc, featureid, color, hover_data, title, ',')\n",
+    "#pct_success_city.show()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 24,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "output/embeds/pct_successful_appeals\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "save_plot(pct_success_city, \"output/pct_successful_appeals\")"
    ]
@@ -509,28 +475,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#| label: sum_appealed\n",
     "log = 10\n",
-    "color = 'sum_appealed_city'\n",
-    "hover_data = {'sum_appealed_city': (\":,.2f\", \"Total sum appealed\")}\n",
+    "color = \"sum_appealed_city\"\n",
+    "hover_data = {\n",
+    "    \"sum_appealed_city\": (\":,.2f\", \"Total sum appealed\"),\n",
+    "    \"lost_revenue_city\": (\":,.2f\", \"Reduction in tax revenue\"),\n",
+    "}\n",
     "title = \"Total Sum Successfully Appealed in Each City Between 2011-2022 (in Billions)\"\n",
-    "postfix='B'\n",
+    "postfix = \"B\"\n",
     "\n",
-    "sum_appealed = map_utils.gen_choropleth_log(log, df, geo, loc, featureid, color, hover_data, title, postfix=postfix)"
+    "sum_appealed = map_utils.gen_choropleth_log(\n",
+    "    log, df, geo, loc, featureid, color, hover_data, title, postfix=postfix\n",
+    ")\n",
+    "#sum_appealed.show()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 28,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "output/embeds/sum_appealed\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "save_plot(sum_appealed, \"output/sum_appealed\")"
    ]
