use flags instead of manual for map gen, update titles

--- a/generate_vis.ipynb
+++ b/generate_vis.ipynb
@@ -32,6 +32,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "SHOW_MAP = False\n",
+    "SAVE_MAP = True\n",
     "by_city = gpd.read_file(\"output/by_city.csv\")\n",
     "by_year = gpd.read_file(\"output/by_year.csv\")\n",
     "by_parcel = gpd.read_file(\"output/by_parcel.csv\")\n",
@@ -88,21 +90,15 @@
     "log = 10\n",
     "color = \"count_appeals_city\"\n",
     "hover_data = {\"count_appeals_city\": (\":,\", \"Count\")}\n",
-    "title = \"# Appeals Filed in Each City of Fulton County 2011-2022\"\n",
+    "title = \"Number of Appeals Filed in Each City of Fulton County (2011-2022)\"\n",
     "\n",
     "num_appeals = map_utils.gen_choropleth_log(\n",
     "    log, df, geo, loc, featureid, color, hover_data, title, \",\"\n",
     ")\n",
-    "#num_appeals.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "save_plot(num_appeals, \"output/num_appeals\")"
+    "if SHOW_MAP:\n",
+    "    num_appeals.show()\n",
+    "if SAVE_MAP:\n",
+    "    save_plot(num_appeals, \"output/num_appeals\")"
    ]
   },
   {
@@ -114,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,22 +118,16 @@
     "log = 10\n",
     "color = \"pct_appeals_in_city\"\n",
     "hover_data = {\"pct_appeals_in_city\": (\":.2\", \"Percent\")}\n",
-    "title = \"Appeals Filed in Each City as % of Appeals Filed in Fulton County 2011-2022\"\n",
+    "title = \"Appeals Filed in Each City as % of Appeals Filed in Fulton County (2011-2022)\"\n",
     "postfix = \"%\"\n",
     "# scale = 'ylorrd'\n",
     "pct_fulton_appeals = map_utils.gen_choropleth_log(\n",
     "    log, df, geo, loc, featureid, color, hover_data, title, postfix=postfix\n",
     ")\n",
-    "#pct_fulton_appeals.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "save_plot(pct_fulton_appeals, \"output/pct_appeals_of_fulton\")"
+    "if SHOW_MAP:\n",
+    "    pct_fulton_appeals.show()\n",
+    "if SAVE_MAP:\n",
+    "    save_plot(num_appeals, \"output/pct_appeals_of_fulton\")"
    ]
   },
   {
@@ -149,14 +139,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "#| label: pct_appeals_over_per_parcels\n",
     "color = \"pct_appeals_over_pct_parcels\"\n",
     "hover_data = {\"pct_appeals_over_pct_parcels\": (\":.2\", \"Ratio\")}\n",
-    "title = \"% Appeals / % Parcels Filed in Each City of Fulton County Between 2011-2022\"\n",
+    "title = \"% Appeals / % Parcels Filed in Each City of Fulton County (2011-2022)\"\n",
     "colorbar_scale = dict(cmid=1)\n",
     "\n",
     "normalized_city = map_utils.gen_choropleth(\n",
@@ -171,16 +161,10 @@
     "    scale=\"temps\",\n",
     "    colorbar_scale=colorbar_scale,\n",
     ")\n",
-    "#normalized_city.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "save_plot(normalized_city, \"output/normalized_appeals\")"
+    "if SHOW_MAP:\n",
+    "    normalized_city.show()\n",
+    "if SAVE_MAP:\n",
+    "    save_plot(num_appeals, \"output/normalized_appeals\")"
    ]
   },
   {
@@ -192,68 +176,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "color = 'percent_filing_geq_than_2_appeals'\n",
     "hover_data = {'percent_filing_geq_than_2_appeals': (\":.2\", \"Percent\")}\n",
-    "title = \"Percent of Parcels Filing More than 1 Appeal Between 2011-2022\"\n",
+    "title = \"Percent of Parcels Filing More than 1 Appeal (2011-2022)\"\n",
     "\n",
-    "geq_1_city = map_utils.gen_choropleth(df, geo, loc, featureid, color, hover_data, title, ',')"
+    "geq_1_city = map_utils.gen_choropleth(df, geo, loc, featureid, color, hover_data, title, ',')\n",
+    "\n",
+    "if SHOW_MAP:\n",
+    "    geq_1_city.show()\n",
+    "if SAVE_MAP:\n",
+    "    save_plot(num_appeals, \"output/geq_1_appeals\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "save_plot(geq_1_city, \"output/geq_1_appeals\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "color = 'percent_filing_geq_than_6_appeals'\n",
     "hover_data = {'percent_filing_geq_than_6_appeals': (\":.2\", \"Percent\")}\n",
-    "title = \"Percent of Parcels Filing More than 6 Appeals Between 2011-2022\"\n",
+    "title = \"Percent of Parcels Filing More than 6 Appeals (2011-2022)\"\n",
     "\n",
-    "geq_6_city = map_utils.gen_choropleth(df, geo, loc, featureid, color, hover_data, title, ',')"
+    "geq_6_city = map_utils.gen_choropleth(df, geo, loc, featureid, color, hover_data, title, ',')\n",
+    "\n",
+    "if SHOW_MAP:\n",
+    "    geq_6_city.show()\n",
+    "if SAVE_MAP:\n",
+    "    save_plot(num_appeals, \"output/geq_6_city\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "save_plot(geq_6_city, \"output/geq_6_appeals\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "color = 'percent_filing_geq_than_9_appeals'\n",
     "hover_data = {'percent_filing_geq_than_9_appeals': (\":.2\", \"Percent\")}\n",
-    "title = \"Percent of Parcels Filing More than 9 Appeals Between 2011-2022\"\n",
+    "title = \"Percent of Parcels Filing More than 9 Appeals (2011-2022)\"\n",
     "\n",
-    "geq_9_city = map_utils.gen_choropleth(df, geo, loc, featureid, color, hover_data, title, ',')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "save_plot(geq_1_city, \"output/geq_9_appeals\")"
+    "geq_9_city = map_utils.gen_choropleth(df, geo, loc, featureid, color, hover_data, title, ',')\n",
+    "\n",
+    "if SHOW_MAP:\n",
+    "    geq_9_city.show()\n",
+    "if SAVE_MAP:\n",
+    "    save_plot(num_appeals, \"output/geq_9_city\")"
    ]
   },
   {
@@ -265,11 +237,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Using map from FCS repo I made previous; will place in output folder"
+    "# Using map from FCS repo I made previously; will place in output folder"
    ]
   },
   {
@@ -281,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +275,7 @@
     "\n",
     "f.update_layout(\n",
     "    title=dict(\n",
-    "        text=\"Percent of Parcels Filing at Least 1 Appeal(s) Between 2011-2022\",\n",
+    "        text=\"Percent of Parcels Filing at Least 1 Appeal (2011-2022)\",\n",
     "        font=dict(size=20),\n",
     "        automargin=True,\n",
     "        yref=\"paper\",\n",
@@ -320,18 +292,12 @@
     "\n",
     "for k in range(0, len(f.frames)):\n",
     "    f.frames[k][\"layout\"].update(\n",
-    "        title_text=f\"Percent of Parcels Filing at Least {k+1} Appeal(s) Between 2011-2022\"\n",
+    "        title_text=f\"Percent of Parcels Filing at Least {k+1} Appeal(s) (2011-2022)\"\n",
     "    )\n",
-    "#f.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "save_plot(f, \"output/animated_n_appeals\")"
+    "if SHOW_MAP:\n",
+    "    f.show()\n",
+    "if SAVE_MAP:\n",
+    "    save_plot(num_appeals, \"output/animated_n_appeals\")"
    ]
   },
   {
@@ -343,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -352,7 +318,7 @@
        "NotImplemented"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -370,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,19 +344,13 @@
     "log = 20\n",
     "color = 'success_count_city'\n",
     "hover_data = {'success_count_city': (\":,\", \"Successful Appeals\")}\n",
-    "title = \"Number of Successful Appeals in Each City of Fulton County Between 2011-2022\"\n",
+    "title = \"Number of Successful Appeals in Each City of Fulton County (2011-2022)\"\n",
     "\n",
     "success_city = map_utils.gen_choropleth_log(log, df, geo, loc, featureid, color, hover_data, title, ',')\n",
-    "#success_city.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "save_plot(success_city, \"output/num_successful_appeals\")"
+    "if SHOW_MAP:\n",
+    "    success_city.show()\n",
+    "if SAVE_MAP:\n",
+    "    save_plot(num_appeals, \"output/num_successful_appeals\")"
    ]
   },
   {
@@ -402,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -410,19 +370,13 @@
     "log = 2\n",
     "color = 'success_rate_city'\n",
     "hover_data = {'success_rate_city': (\":.1f\", \"Successful Appeals\")}\n",
-    "title = \"Success Rate of Appeals in Each City of Fulton County Between 2011-2022\"\n",
+    "title = \"Success Rate of Appeals in Each City of Fulton County (2011-2022)\"\n",
     "\n",
     "pct_success_city = map_utils.gen_choropleth_log(log, df, geo, loc, featureid, color, hover_data, title, ',')\n",
-    "#pct_success_city.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "save_plot(pct_success_city, \"output/pct_successful_appeals\")"
+    "if SHOW_MAP:\n",
+    "    pct_success_city.show()\n",
+    "if SAVE_MAP:\n",
+    "    save_plot(num_appeals, \"output/pct_successful_appeals\")"
    ]
   },
   {
@@ -434,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -443,7 +397,7 @@
        "NotImplemented"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -462,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -471,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -482,22 +436,16 @@
     "    \"sum_appealed_city\": (\":,.2f\", \"Total sum appealed\"),\n",
     "    \"lost_revenue_city\": (\":,.2f\", \"Reduction in tax revenue\"),\n",
     "}\n",
-    "title = \"Total Sum Successfully Appealed in Each City Between 2011-2022 (in Billions)\"\n",
+    "title = \"Total Sum Appealed in Each City of Fulton County (2011-2022, in Billion $)\"\n",
     "postfix = \"B\"\n",
     "\n",
     "sum_appealed = map_utils.gen_choropleth_log(\n",
     "    log, df, geo, loc, featureid, color, hover_data, title, postfix=postfix\n",
     ")\n",
-    "#sum_appealed.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "save_plot(sum_appealed, \"output/sum_appealed\")"
+    "if SHOW_MAP:\n",
+    "    sum_appealed.show()\n",
+    "if SAVE_MAP:\n",
+    "    save_plot(num_appeals, \"output/sum_appealed\")"
    ]
   }
  ],
